--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,11 +1,15 @@
-/data
 
-# Created by https://www.toptal.com/developers/gitignore/api/docker,dotnet,rider,osx
-# Edit at https://www.toptal.com/developers/gitignore?templates=docker,dotnet,rider,osx
+# Created by https://www.toptal.com/developers/gitignore/api/dotnetcore,rider,osx
+# Edit at https://www.toptal.com/developers/gitignore?templates=dotnetcore,rider,osx
 
-#!! ERROR: docker is undefined. Use list command to see defined gitignore types !!#
+### DotnetCore ###
+# .NET Core build folders
+bin/
+obj/
 
-#!! ERROR: dotnet is undefined. Use list command to see defined gitignore types !!#
+# Common node modules locations
+/node_modules
+/wwwroot/node_modules
 
 ### OSX ###
 # General
@@ -14,8 +18,7 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
-
+Icon
 
 # Thumbnails
 ._*
@@ -112,19 +115,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-# End of https://www.toptal.com/developers/gitignore/api/docker,dotnet,rider,osx
-n
-# Created by https://www.toptal.com/developers/gitignore/api/dotnetcore
-# Edit at https://www.toptal.com/developers/gitignore?templates=dotnetcore
-
-### DotnetCore ###
-# .NET Core build folders
-bin/
-obj/
-
-# Common node modules locations
-/node_modules
-/wwwroot/node_modules
-
-# End of https://www.toptal.com/developers/gitignore/api/dotnetcore
+# End of https://www.toptal.com/developers/gitignore/api/dotnetcore,rider,osx
 n
