--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "PostGisContext": "Host=localhost;Database=postgis;Username=postgis;Password=postgis;"
   }
 }
